--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>public-template-plane</title>
+    <title>ar-plane</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -26,7 +26,7 @@
 <body>
   <div id="card">
     <!-- All you need to put beautiful, interactive 3D content on your site: -->
-    <model-viewer src="template.glb"
+    <model-viewer src="pikachu.glb"
                   alt="template"
                   shadow-intensity="1"
                   camera-controls
@@ -34,7 +34,7 @@
     </model-viewer>
     <section class="attribution">
       <span>
-        <h1>template</h1>
+        <h1>hi</h1>
     </section>
   </div>
    
